# tmp-test-cross-rt

./: Cargo.toml  README  build.rs
proto/echo/: echo.proto
src/streaming/: client.rs  server.rs
